force-app/main/default/objects/Eng_VP_TeamMember__c/Eng_VP_TeamMember__c.object-meta.xml
<CustomObject>
    <description>This is related with Engagement Valuation Period Position and HL Internal Team Members</description>
    <label>Eng Valuation Period TeamMember</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eng Valuation Period TeamMembers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>