force-app/main/default/objects/Eng_VP_TeamMember__c/fields/Engagement_VP_Position__c.field-meta.xml
<CustomField>
    <fullName>Engagement_VP_Position__c</fullName>
    <label>Engagement Valuation Period Position</label>
    <referenceTo>Eng_VP_Position__c</referenceTo>
    <relationshipLabel>Eng Valuation Period TeamMembers</relationshipLabel>
    <relationshipName>Eng_VP_TeamMembers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>