force-app/main/default/objects/Eng_VP_TeamMember__c/fields/Is_Team_Member_Deactivated_Once__c.field-meta.xml
<CustomField>
    <fullName>Is_Team_Member_Deactivated_Once__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is to determine when related Opp/Eng Team Member was removed from Opp/Eng once.</description>
    <label>Is Team Member Deactivated Once</label>
    <type>Checkbox</type>
</CustomField>