force-app/main/default/objects/Eng_VP_TeamMember__c/fields/Team_Member_Status__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Status__c</fullName>
    <formula>IF( End_Date__c &lt;=  TODAY()  , &apos;Inactive&apos;, &apos;Active&apos;)</formula>
    <label>Team Member Status</label>
    <type>Text</type>
</CustomField>