force-app/main/default/objects/Eng_VP_TeamMember__c/validationRules/HL_Eng_VP_Position_Change_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>HL_Eng_VP_Position_Change_Not_Allowed</fullName>
    <active>true</active>
    <description>To stop changing Engagement VP Position on Engagement VP Team Member.</description>
    <errorConditionFormula>IF(NOT(ISNEW()),IF(ISCHANGED(Engagement_VP_Position__c), true, false), false)</errorConditionFormula>
    <errorDisplayField>Engagement_VP_Position__c</errorDisplayField>
    <errorMessage>You are not allowed to change &apos;Engagement VP Position&apos;.</errorMessage>
</ValidationRule>