force-app/main/default/objects/Eng_VP_TeamMember__c/validationRules/HL_Eng_VP_TM_Staff_Change_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>HL_Eng_VP_TM_Staff_Change_Not_Allowed</fullName>
    <active>true</active>
    <description>To stop changing staff on VP Team Member</description>
    <errorConditionFormula>IF(NOT(ISNEW()),IF(ISCHANGED(Staff__c), true, false), false)</errorConditionFormula>
    <errorDisplayField>Staff__c</errorDisplayField>
    <errorMessage>You are not allowed to change Staff.</errorMessage>
</ValidationRule>