force-app/main/default/objects/Eng_VP_TeamMember__c/validationRules/Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date</fullName>
    <active>true</active>
    <description>Start Date is mandatory field</description>
    <errorConditionFormula>ISBLANK(Start_Date__c)</errorConditionFormula>
    <errorMessage>Start Date is required.</errorMessage>
</ValidationRule>