force-app/main/default/objects/Eng_VP_TeamMember__c/listViews/Active_Eng_Positions.listView-meta.xml
<ListView>
    <fullName>Active_Eng_Positions</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>End_Date__c</columns>
    <columns>Engagement_VP_Position__c</columns>
    <columns>Is_Team_Member_Deactivated_Once__c</columns>
    <columns>Role__c</columns>
    <columns>Staff__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Team_Member_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Team_Member_Status__c</field>
        <operation>equals</operation>
        <value>active</value>
    </filters>
    <label>Active Eng Positions</label>
</ListView>